--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+ 
 
 </head>
 <body>
   <nav class="d-flex justify-content-between">
     <img src="./assets/images/logo.svg" alt="">
-    <div class="nav-tab d-flex align-items-center">
-      <a href=""><p>Home</p></a>
-      <a href=""><p>New</p></a>
-      <a href=""><p>Popular</p></a>
-      <a href=""><p>Trending</p></a>
-      <a href=""><p>Categories</p></a>
+    <buttom class="nav-toggle">
+      <span class="hamburger"></span>
+    </buttom> 
+    <div class="hamburger-wrap">
+      <ul class="nav-tab align-items-center">
+        <li><a href="" class="nav-link">Home</a></li>
+        <li><a href="" class="nav-link">New</a></li>
+        <li><a href="" class="nav-link">Popular</a></li>
+        <li><a href="" class="nav-link">Trending</a></li>
+        <li><a href="" class="nav-link">Categories</a></li>
+      </ul>
     </div>
   </nav>
   <!-- MAIN SESSION -->
@@ -116,5 +121,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Jenny Huang @balaooo</a>.
   </div>
+
+   <!-- JS -->
+   <script src="./main.js"></script>
 </body>
 </html>
